--- a/ChampionMains.Pyrobot.Infrastructure/ChampionMains.Pyrobot.Infrastructure.csproj
+++ b/ChampionMains.Pyrobot.Infrastructure/ChampionMains.Pyrobot.Infrastructure.csproj
@@ -112,15 +112,12 @@
     <Compile Include="Jobs\BulkUpdateJob.cs" />
     <Compile Include="Jobs\ConfirmFlairUpdatedMailJob.cs" />
     <Compile Include="Jobs\ConfirmRegistrationMailJob.cs" />
-    <Compile Include="Jobs\BulkFlairUpdateJob.cs" />
-    <Compile Include="Jobs\BulkSummonerUpdateJob.cs" />
     <Compile Include="Jobs\FlairUpdateJob.cs" />
     <Compile Include="Jobs\SummonerUpdateJob.cs" />
     <Compile Include="RankUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApplicationConfiguration.cs" />
-    <Compile Include="Services\FlairUpdateService.cs" />
-    <Compile Include="Services\LeagueUpdateService.cs" />
+    <Compile Include="Services\FlairService.cs" />
     <Compile Include="Services\RedditService.cs" />
     <Compile Include="Services\Reddit\RedditWebRequester.cs" />
     <Compile Include="Services\Reddit\SubRedditKind.cs" />
