--- a/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
+++ b/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
@@ -230,6 +230,7 @@
     <Content Include="content\bootstrap\js\bootstrap.js" />
     <Content Include="content\bootstrap\js\bootstrap.min.js" />
     <Content Include="content\css\cyborg.css" />
+    <Content Include="content\css\flairdisplay.css" />
     <Content Include="content\icons\android-icon-144x144.png" />
     <Content Include="content\icons\android-icon-192x192.png" />
     <Content Include="content\icons\android-icon-36x36.png" />
@@ -277,14 +278,16 @@
     <Compile Include="Attributes\WebApiAuthorizeAttribute.cs" />
     <Compile Include="CacheUtil.cs" />
     <Compile Include="Controllers\LoginController.cs" />
-    <Compile Include="Controllers\ProfileApiController.cs" />
-    <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\PublicApiController.cs" />
+    <Compile Include="Controllers\ProfileApiController.cs" />
+    <Compile Include="Controllers\PublicProfileController.cs" />
+    <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\RegistrationApiController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\PublicApiViewModels.cs" />
+    <Compile Include="Models\LeaderboardViewModels.cs" />
     <Compile Include="Models\ProfileApiViewModels.cs" />
     <Compile Include="Models\ProfileViewModel.cs" />
     <Compile Include="Models\FlairViewModel.cs" />
@@ -320,6 +323,7 @@
     <Content Include="Properties\webjobs-list.json" />
     <Content Include="Views\Web.config" />
     <!-- - -->
+    <Content Include="Views\Profile\flairdisplay.cshtml" />
     <None Include="Web.config" />
     <Content Include="Web.template.config" />
     <None Include="Web.Example.config" />
